[package]
name = "decent-share"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata.release]
release = false

[dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
clap = { version = "4.5.6", features = ["derive"] }
futures = "0.3.31"
regex = "1.11.1"
libp2p = { version = "0.55.0", features = [
  "tokio",
  "cbor",
  "dns",
  "kad",
  "noise",
  "macros",
  "request-response",
  "tcp",
  "websocket",
  "yamux",
  "mdns",
  "gossipsub",
  "quic",
  "rendezvous",
  "identify",
] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"

[lints.clippy]
pedantic = "warn"
perf = "warn"
complexity = "warn"
suspicious = "warn"
style = "warn"
must_use_candidate = { level = "allow", priority = 10 }
